fix gap between mobile bar and letter menu on home page

--- a/src/resources/elements/menu-bar.scss
+++ b/src/resources/elements/menu-bar.scss
@@ -1,6 +1,9 @@
+@import '../../_theme';
+
 menu-bar {
   .menu.bars {
     display: none;
+    height: $menu-bar-height;
   }
   @media only screen and (max-width: 767px) {
     .menu.main {
